--- a/index.html
+++ b/index.html
@@ -1,38 +1,97 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Member Registration</title>
-</head>
-<body>
-    <h1>Register</h1>
-    <form id="register-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <button type="submit">Get QR Code</button>
-    </form>
-    <div id="qr-code" style="display:none;">
-        <h2>Your QR Code:</h2>
-        <img id="qr-img" src="" alt="QR Code">
-    </div>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>GeekyMacet</title>
+        <link rel="icon" href="resources/club_logo.png">
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-    <script>
-        document.getElementById('register-form').onsubmit = async function(e) {
-            e.preventDefault(); // Prevent the form from submitting the default way
-            const formData = new FormData(this);
-            const response = await fetch('http://127.0.0.1:5000/generate_qr', {
-                method: 'POST',
-                body: formData
-            });
-            const result = await response.json();
-            if (result.success) {
-                document.getElementById('qr-img').src = result.qr_code_url;
-                document.getElementById('qr-code').style.display = 'block';
-            } else {
-                alert('Error generating QR code.');
-            }
-        };
-    </script>
-</body>
+    <body>
+        <!-- Scrolling Bar -->
+        <div class="scrolling-bar">
+            <p>Welcome to the GeekyMacet</p>
+        </div>
+        <!-- Navbar -->
+        <nav>
+            <div id="menuToggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/register.html">Register User</a></li>
+                    <li><a href="pages/verify.html">Verify User</a></li>
+                    <li><a href="pages/contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <ul>
+                <li><img src="resources/club_logo.png" alt="Club Logo"
+                        id="college-logo"></li>
+                <li><a href="index.html" class="navm">Home</a></li>
+                <li><a href="pages/register.html" class="navm">Register
+                        User</a></li>
+                <li><a href="pages/verify.html" class="navm">Verify
+                        User</a></li>
+                <li><a href="pages/contact.html" class="navm">Contact</a></li>
+                <li><img src="resources/macet_logo.png" alt="College Logo"
+                        id="club-logo"></li>
+            </ul>
+        </nav>
+        <!-- Hero Section -->
+        <header class="header-content">
+            <div class="text-content">
+                <h1>GeekyMacet</h1>
+                <p>"random text"</p>
+
+                <div class="button-container">
+                    <a href="verify.html" class="button">More about us..</a>
+                </div>
+            </div>
+            <img src="resources/background.gif" alt="AI Logo" class="ai-logo">
+        </header>
+
+        <div class="socials" id="contact">
+            <a href="https://github.com/parazeeknova"
+                class="social-button github"><img src="resources/github.png"
+                    alt="GitHub"></a>
+            <a href="https://linkedin.com/in/hashk"
+                class="social-button linkedin"><img src="resources/linkedin.png"
+                    alt="LinkedIn"></a>
+            <a href="https://instagram.com/hashcodes_"
+                class="social-button instagram"><img
+                    src="resources/instagram.png" alt="Instagram"></a>
+            <a href="https://discord.com/invite/parazeeknova"
+                class="social-button discord"><img src="resources/discord.png"
+                    alt="Discord"></a>
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <p align="center"><b>GeekyMacet - Code Together Grow
+                    Together</b></p>
+            <br />
+            <p align="center">Made with 💖 by <a
+                    href>Sameer &
+                    Fahad</a></p>
+            <br />
+            <div align="center" class="social-button-foot" id="about">
+                <a href><img
+                        src="resources/githubs.png" /></a>
+                <a href><img
+                        src="resources/linkedins.png" /></a>
+                <a href><img
+                        src="resources/twitters.png" /></a>
+                <a href="_"><img
+                        src="resources/instagrams.png" /></a>
+                <a href><img
+                        src="resources/discords.png" /></a>
+            </div>
+            <br />
+            <p align="center">Copyright © 2024 GeekyMacet - Sameer & AL
+                Fahad</p>
+        </footer>
+    </body>
 </html>
