--- a/pages/verify.html
+++ b/pages/verify.html
@@ -15,7 +15,7 @@
                 <span></span>
                 <span></span>
                 <ul id="menu">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="register.html">Register User</a></li>
                     <li><a href="verify.html">Verify User</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -24,7 +24,7 @@
             <ul>
                 <li><img src="../resources/club_logo.png" alt="Club Logo"
                         id="college-logo"></li>
-                <li><a href="index.html" class="navm">Home</a></li>
+                <li><a href="../index.html" class="navm">Home</a></li>
                 <li><a href="register.html" class="navm">Register
                         User</a></li>
                 <li><a href="verify.html" class="navm">Verify
