--- a/pages/register.html
+++ b/pages/register.html
@@ -4,6 +4,19 @@
         <title>Member Registration</title>
         <link rel="icon" href="resources/club_logo.png">
         <link rel="stylesheet" href="../styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Amaranth:700i"
+            rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css?family=Montserrat+Alternates"
+            rel="stylesheet">
+
+        <link href="https://fonts.googleapis.com/css?family=Maven+Pro"
+            rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300i"
+            rel="stylesheet">
+
+        <link rel="stylesheet" href="../css/normalize.css">
     </head>
     <body>
         <nav>
@@ -32,35 +45,94 @@
                         id="club-logo"></li>
             </ul>
         </nav>
-        <h1>Register</h1>
-        <form id="register-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <button type="submit">Get QR Code</button>
-        </form>
-        <div id="qr-code" style="display:none;">
-            <h2>Your QR Code:</h2>
-            <img id="qr-img" src alt="QR Code">
-        </div>
 
-        <script>
-        document.getElementById('register-form').onsubmit = async function(e) {
-            e.preventDefault(); // Prevent the form from submitting the default way
-            const formData = new FormData(this);
-            const response = await fetch('http://127.0.0.1:5000/generate_qr', {
-                method: 'POST',
-                body: formData
-            });
-            const result = await response.json();
-            if (result.success) {
-                document.getElementById('qr-img').src = result.qr_code_url;
-                document.getElementById('qr-code').style.display = 'block';
-            } else {
-                alert('Error generating QR code.');
-            }
-        };
-    </script>
+    </div>
+    <div class="container">
+
+        <h2 style="color: rgb(66, 56, 90);">Register New User</h2>
+
+        <div class="border-up"></div>
+        <div class="border-down"></div>
+        <form action="index.html" method="post">
+            <fieldset>
+                <div class="row">
+                    <label for="name">Full Name</label>
+                    <div class="tf">
+                        <input type="text" id="name" name="user_name"
+                            placeholder="Required" required><br />
+                    </div>
+                </div>
+                <div class="row">
+                    <label for="email">Email Address</label>
+                    <div class="tf">
+                        <input type="email" id="email" name="user_mail"
+                            placeholder="Required" required><br />
+                    </div>
+                </div>
+                <div class="row">
+                    <label for="number">Phone Number</label>
+                    <div class="tf">
+                        <input type="tel" id="number" name="user_number"
+                            placeholder="999999999"><br />
+                    </div>
+                </div>
+                <div class="row">
+                    <label for="number">Roll No</label>
+                    <div class="tf">
+                        <input type="text" id="address" name="user_address"
+                            placeholder="123 Fake Street"><br />
+                    </div>
+                </div>
+
+                <div class="row">
+                    <label for="branch">Branch</label>
+                    <div class="tf">
+                        <select id="branch"><br><br />
+                            <option value disabled selected class="dis">Choose
+                                Branch</option>
+                            <option value="Dcse">Diploma in Computer Science &
+                                Engg</option>
+                            <option value="Dce">Diploma in Civil Engg.</option>
+                            <option value="Dee">Diploma in Electrical
+                                Engg.</option>
+                            <option value="cse">B. Tech. in Computer Sc. &
+                                Engineering</option>
+                            <option value="cse_aiml">B. Tech. in Computer Sc. &
+                                Engg (AI & ML)</option>
+                            <option value="csi_ds">B. Tech. in Computer Sc. &
+                                Engg (Data Science) </option>
+                            <option value="ce">B. Tech. in Civil
+                                Engineering</option>
+                            <option value="me">B. Tech. in Mechanical
+                                Engineering</option>
+                            <option value="ee">B. Tech. in Electrical and
+                                Electronics Engg.</option>
+                            <option value="hs">Humanities and Sciences</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <label for="batch">Year</label>
+                    <div class="tf">
+                        <select id="year"> <br><br />
+                            <option value disabled selected class="dis">Choose
+                                Year</option>
+                            <option value="2019">2019</option>
+                            <option value="2020">2020</option>
+                            <option value="2021">2021</option>
+                            <option value="2022">2022</option>
+                            <option value="2023">2023</option>
+                            <option value="2024">2024</option>
+                        </select>
+                    </div>
+                </div>
+                <button type="submit">Register </button>
+                <p style="color: rgb(66, 56, 90);" class="footer">&copy;
+                    Copyright Geekymacet</p>
+            </form>
+        </div>
     </body>
+    <footer>
+
+    </footer>
 </html>
