--- a/pages/verify.html
+++ b/pages/verify.html
@@ -34,6 +34,6 @@
                         id="club-logo"></li>
             </ul>
         </nav>
-        <h1>verify pagesddd</h1>
+        <h1>verify page</h1>
     </body>
 </html>
